# Cos-214-Prac3_yes

./: Ambush.cpp  Ambush.h  AmbushStrategy.cpp  AmbushStrategy.h  Artillery.cpp  Artillery.h  BattleStrategy.cpp  BattleStrategy.h  CMakeLists.txt  Cavalry.cpp  Cavalry.h  Flanking.cpp  Flanking.h  FlankingStrategy.cpp  FlankingStrategy.h  Fortification.h  FortificationStrategy.cpp  FortificationStrategy.h  Infantry.cpp  Infantry.h  Legion.cpp  Legion.h  LegionFactory.cpp  LegionFactory.h  LegionUnit.cpp  LegionUnit.h  Makefile  OpenFieldArtillery.cpp  OpenFieldArtillery.h  OpenFieldCavalry.h  OpenFieldFactory.cpp  OpenFieldFactory.h  OpenFieldInfantry.h  OpenFieldIntanfry.cpp  OpenFieldUnits.cpp  OpenFieldUnits.h  RiverbankArtillery.h  RiverbankCavalry.h  RiverbankFactory.cpp  RiverbankFactory.h  (+27 more)
